@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-07-17"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20080717
-#define RUBY_PATCHLEVEL 62
+#define RUBY_PATCHLEVEL 63
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
