@@ -1,3 +1,8 @@
+Thu Jul 17 21:42:07 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* lib/net/smtp.rb (Net::SMTP::start): revert to avoid RFC2821
+	  violation. [ruby-dev:35487]
+
 Thu Jul 17 21:32:49 2008  Tanaka Akira  <akr@fsij.org>
 
 	* string.c (rb_str_format_m): make tmp volatile to avoid possible GC
